# security-playground

./: .gitignore  README.md
Real-Vuln-Benchmark/: benchmark-manifest.json
Real-Vuln-Benchmark/.github/workflows/: deploy-dashboard.yml
Real-Vuln-Benchmark/ground-truth/realvuln-damn-vulnerable-flask-application/: ground-truth.json
Real-Vuln-Benchmark/ground-truth/realvuln-damn-vulnerable-graphql-application/: ground-truth.json
Real-Vuln-Benchmark/ground-truth/realvuln-djangoat/: ground-truth.json
Real-Vuln-Benchmark/reports/: dashboard.html
Real-Vuln-Benchmark/scorer/: matcher.py
Real-Vuln-Benchmark/tests/: test_matcher.py
java/spring/: application.properties  pom.xml
python/fastapi/: pyproject.toml
python/fastapi/data/: base.db
python/fastapi/fastapi-pg/: app.py
python/fastapi/fastapi-pg/adapters/: db.py
python/fastapi/fastapi-pg/helpers/: auth.py
python/fastapi/fastapi-pg/models/: domain.py  requests.py  responses.py
python/fastapi/fastapi-pg/routers/: login.py  messages.py
python/fastapi/fastapi-pg/services/: messages.py  sessions.py  users.py
python/fastapi/fastapi-pg/utils/: security.py
python/vulnyapi/: README.md  app.py  pyproject.toml
python/vulnyapi/adapters/: db.py
python/vulnyapi/helpers/: auth.py
python/vulnyapi/models/: domain.py  requests.py  responses.py
python/vulnyapi/routers/: admin.py  auth.py  files.py  notes.py  users.py  webhooks.py
python/vulnyapi/services/: auth.py  notes.py  sms.py  users.py
python/vulnyapi/utils/: security.py
typescript/vault-pay/: README.md  package.json  tsconfig.json
(+154 files in other folders)
