[project]
name = "fastapi-pg"
version = "0.1.0"
description = "Vulnerable FastAPI Web Application"
authors = [
    {name = "grauwolf32"}
]
readme = "README.md"
requires-python = "3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"

